# bizzmq-py

./: Dockerfile  LICENSE  README.md   pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml
bizzmq/: __init__.py  client.py  consumer.py  message.py  producer.py  queue.py  redis_client.py
examples/: basic.py
